index and show movie ok in front, removed poster column, found no api open enough to bother with it. doc isnt finished but added get user. Trying first deploy vite fait
